'Focus'(center) applied on a rig should only take visible bones into account #32353

Closed
opened 2012-08-18 10:06:32 +02:00 by Gaia Clary · 3 comments
Member

%%%The attached blend file contains a rig with an eye controller far away from the rest of the skeleton.
When i hide the eye controller, then i expect that the remaining skeleton will be centered in the
viewport by pressing "." (dot) on the Numpad.

What happens:

the hidden eye controller bone is still used to calculate the effective center point.
Reproduce:

  • open the attached blend file
  • see that the skeleton is roughly placed at the center (was done manually)
  • press numpad "." (dot)
  • see that the skeleton shifts to the right side
  • go to pose mode
  • unhide the currently selected bone
  • see that the center is calculated regardless of the bone visibility

expected behaviour:

Only take the visible elements on the view port into account.
%%%

%%%The attached blend file contains a rig with an eye controller far away from the rest of the skeleton. When i hide the eye controller, then i expect that the remaining skeleton will be centered in the viewport by pressing "." (dot) on the Numpad. What happens: the hidden eye controller bone is still used to calculate the effective center point. Reproduce: - open the attached blend file - see that the skeleton is roughly placed at the center (was done manually) - press numpad "." (dot) - see that the skeleton shifts to the right side - go to pose mode - unhide the currently selected bone - see that the center is calculated regardless of the bone visibility expected behaviour: Only take the visible elements on the view port into account. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r49986.%%%

%%%fixed r49986.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32353
No description provided.