fix [#32353] 'Focus'(center) applied on a rig should only take visible bones into account