source/blender/editors/space_view3d/view3d_edit.c
@@ -2072,7 +2072,7 @@ static int view3d_all_exec(bContext *C, wmOperator *op) /* was view3d_home() in 
 				continue;
 			}
 
-			BKE_object_minmax(base->object, min, max);
+			BKE_object_minmax(base->object, min, max, FALSE);
 		}
 	}
 	if (!onedone) {
@@ -2218,8 +2218,8 @@ static int viewselected_exec(bContext *C, wmOperator *UNUSED(op))
 				}
 
 				/* account for duplis */
-				if (BKE_object_minmax_dupli(scene, base->object, min, max) == 0)
-					BKE_object_minmax(base->object, min, max);  /* use if duplis not found */
+				if (BKE_object_minmax_dupli(scene, base->object, min, max, FALSE) == 0)
+					BKE_object_minmax(base->object, min, max, FALSE);  /* use if duplis not found */
 
 				ok = 1;
 			}
